// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Screen /> should handle "loading/loadingOverlayProps" props 1`] = `
<Screen
  loading={true}
  loadingOverlayProps={
    Object {
      "spinnerProps": Object {
        "size": "medium",
      },
    }
  }
>
  <Portal>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
            style="z-index: 300;"
          >
            <div
              class="loading-overlay fill"
            >
              <div>
                <svg
                  class="spinner size-medium"
                  height="48"
                  stroke="#1f84db"
                  viewBox="0 0 48 48"
                  width="48"
                >
                  <circle
                    class="circle"
                    cx="24"
                    cy="24"
                    r="23"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
        style={
          Object {
            "zIndex": 300,
          }
        }
      >
        <LoadingOverlay
          spinnerProps={
            Object {
              "size": "medium",
            }
          }
        >
          <div
            className="loading-overlay fill"
          >
            <Spinner
              size="medium"
            >
              <div>
                <svg
                  className="spinner size-medium"
                  height={48}
                  stroke="#1f84db"
                  viewBox="0 0 48 48"
                  width={48}
                >
                  <circle
                    className="circle"
                    cx={24}
                    cy={24}
                    r={23}
                  />
                </svg>
              </div>
            </Spinner>
          </div>
        </LoadingOverlay>
      </div>
    </Portal>
  </Portal>
</Screen>
`;

exports[`<Screen /> should handle "loadingArea" prop 1`] = `
<Screen
  loading={true}
  loadingArea="content"
>
  <Portal>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
            style="z-index: 300;"
          >
            <div
              class="nav-bar inner-border-bottom"
              style="height: 56px;"
            >
              <div
                class="button-groups"
              >
                <div
                  class="group"
                >
                  <button
                    aria-hidden="true"
                    aria-label="Закрыть"
                    class="button icon stub"
                    type="button"
                  />
                </div>
              </div>
              <div
                class="main"
              />
              <div
                class="button-groups end"
              >
                <div
                  class="group"
                >
                  <button
                    aria-hidden="false"
                    aria-label="Закрыть"
                    class="button icon"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg"
                      fill="#212121"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M20.707 3.293a1 1 0 010 1.414l-16 16a1 1 0 01-1.414-1.414l16-16a1 1 0 011.414 0z"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M3.293 3.293a1 1 0 011.414 0l16 16a1 1 0 01-1.414 1.414l-16-16a1 1 0 010-1.414z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="content full-width"
            >
              <div
                class="loading-overlay"
                style="height: 100%;"
              >
                <div>
                  <svg
                    class="spinner size-medium"
                    height="48"
                    stroke="#1f84db"
                    viewBox="0 0 48 48"
                    width="48"
                  >
                    <circle
                      class="circle"
                      cx="24"
                      cy="24"
                      r="23"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
        style={
          Object {
            "zIndex": 300,
          }
        }
      >
        <ScreenLayout
          childrenRef={[Function]}
          fullScrollThreshold={320}
          onBack={[Function]}
          onClose={[Function]}
          withBackButton={false}
          withCloseButton={true}
          withDivideHeader={true}
          withHeader={true}
        >
          <NavBar
            bottomBordered={true}
            buttons={
              Object {
                "end": Object {
                  "aria-label": "Закрыть",
                  "icon": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "render": [Function],
                  },
                  "onClick": [Function],
                },
                "start": undefined,
              }
            }
          >
            <div
              className="nav-bar inner-border-bottom"
              style={
                Object {
                  "height": "56px",
                }
              }
            >
              <div
                className="button-groups"
              >
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Закрыть"
                    icon={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "render": [Function],
                      }
                    }
                    onClick={[Function]}
                    stub={true}
                  >
                    <button
                      aria-hidden={true}
                      aria-label="Закрыть"
                      className="button icon stub"
                      onClick={[Function]}
                      type="button"
                    />
                  </NavButton>
                </div>
              </div>
              <div
                className="main"
              />
              <div
                className="button-groups end"
              >
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Закрыть"
                    icon={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "render": [Function],
                      }
                    }
                    onClick={[Function]}
                  >
                    <button
                      aria-hidden={false}
                      aria-label="Закрыть"
                      className="button icon"
                      onClick={[Function]}
                      type="button"
                    >
                      <ForwardRef(CrossSVG)
                        aria-hidden="true"
                        className="svg"
                        fill="#212121"
                      >
                        <svg
                          aria-hidden="true"
                          className="svg"
                          fill="#212121"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            clipRule="evenodd"
                            d="M20.707 3.293a1 1 0 010 1.414l-16 16a1 1 0 01-1.414-1.414l16-16a1 1 0 011.414 0z"
                            fillRule="evenodd"
                          />
                          <path
                            clipRule="evenodd"
                            d="M3.293 3.293a1 1 0 011.414 0l16 16a1 1 0 01-1.414 1.414l-16-16a1 1 0 010-1.414z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </ForwardRef(CrossSVG)>
                    </button>
                  </NavButton>
                </div>
              </div>
            </div>
          </NavBar>
          <div
            className="content full-width"
          >
            <LoadingOverlay
              fill={false}
              style={
                Object {
                  "height": "100%",
                }
              }
            >
              <div
                className="loading-overlay"
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <Spinner>
                  <div>
                    <svg
                      className="spinner size-medium"
                      height={48}
                      stroke="#1f84db"
                      viewBox="0 0 48 48"
                      width={48}
                    >
                      <circle
                        className="circle"
                        cx={24}
                        cy={24}
                        r={23}
                      />
                    </svg>
                  </div>
                </Spinner>
              </div>
            </LoadingOverlay>
          </div>
        </ScreenLayout>
      </div>
    </Portal>
  </Portal>
</Screen>
`;

exports[`<Screen /> should handle props 1`] = `
<Screen
  footer="Test footer"
  onBack={[MockFunction]}
  onClose={[MockFunction]}
  subtitle="Test subtitle"
  title="Test title"
  withBackButton={true}
  withCloseButton={true}
>
  <Portal>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
            style="z-index: 300;"
          >
            <div
              class="nav-bar inner-border-bottom"
              style="height: 56px;"
            >
              <div
                class="button-groups"
              >
                <div
                  class="group"
                >
                  <button
                    aria-hidden="false"
                    aria-label="Вернуться назад"
                    class="button icon"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg"
                      fill="#212121"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M11.707 3.293a1 1 0 010 1.414L4.414 12l7.293 7.293a1 1 0 01-1.414 1.414l-8-8a1 1 0 010-1.414l8-8a1 1 0 011.414 0z"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M3 12a1 1 0 011-1h17a1 1 0 110 2H4a1 1 0 01-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="group"
                >
                  <button
                    aria-hidden="true"
                    aria-label="Закрыть Test title"
                    class="button icon stub"
                    type="button"
                  />
                </div>
              </div>
              <div
                class="main"
              >
                <div
                  class="title truncate"
                >
                  Test title
                </div>
                <div
                  class="subtitle truncate"
                >
                  Test subtitle
                </div>
              </div>
              <div
                class="button-groups end"
              >
                <div
                  class="group"
                >
                  <button
                    aria-hidden="false"
                    aria-label="Закрыть Test title"
                    class="button icon"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg"
                      fill="#212121"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M20.707 3.293a1 1 0 010 1.414l-16 16a1 1 0 01-1.414-1.414l16-16a1 1 0 011.414 0z"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M3.293 3.293a1 1 0 011.414 0l16 16a1 1 0 01-1.414 1.414l-16-16a1 1 0 010-1.414z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="group"
                >
                  <button
                    aria-hidden="true"
                    aria-label="Вернуться назад"
                    class="button icon stub"
                    type="button"
                  />
                </div>
              </div>
            </div>
            <div
              class="content full-width"
            >
              Test content
            </div>
            <div
              class="footer full-width"
            >
              Test footer
            </div>
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
        style={
          Object {
            "zIndex": 300,
          }
        }
      >
        <ScreenLayout
          childrenRef={[Function]}
          footer="Test footer"
          fullScrollThreshold={320}
          onBack={[Function]}
          onClose={[Function]}
          subtitle="Test subtitle"
          title="Test title"
          withBackButton={true}
          withCloseButton={true}
          withDivideHeader={true}
          withHeader={true}
        >
          <NavBar
            bottomBordered={true}
            buttons={
              Object {
                "end": Object {
                  "aria-label": "Закрыть Test title",
                  "icon": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "render": [Function],
                  },
                  "onClick": [Function],
                },
                "start": Object {
                  "aria-label": "Вернуться назад",
                  "icon": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "render": [Function],
                  },
                  "onClick": [Function],
                },
              }
            }
            subtitle="Test subtitle"
            title="Test title"
          >
            <div
              className="nav-bar inner-border-bottom"
              style={
                Object {
                  "height": "56px",
                }
              }
            >
              <div
                className="button-groups"
              >
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Вернуться назад"
                    icon={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "render": [Function],
                      }
                    }
                    onClick={[Function]}
                  >
                    <button
                      aria-hidden={false}
                      aria-label="Вернуться назад"
                      className="button icon"
                      onClick={[Function]}
                      type="button"
                    >
                      <ForwardRef(ArrowLeftSVG)
                        aria-hidden="true"
                        className="svg"
                        fill="#212121"
                      >
                        <svg
                          aria-hidden="true"
                          className="svg"
                          fill="#212121"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            clipRule="evenodd"
                            d="M11.707 3.293a1 1 0 010 1.414L4.414 12l7.293 7.293a1 1 0 01-1.414 1.414l-8-8a1 1 0 010-1.414l8-8a1 1 0 011.414 0z"
                            fillRule="evenodd"
                          />
                          <path
                            clipRule="evenodd"
                            d="M3 12a1 1 0 011-1h17a1 1 0 110 2H4a1 1 0 01-1-1z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </ForwardRef(ArrowLeftSVG)>
                    </button>
                  </NavButton>
                </div>
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Закрыть Test title"
                    icon={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "render": [Function],
                      }
                    }
                    onClick={[Function]}
                    stub={true}
                  >
                    <button
                      aria-hidden={true}
                      aria-label="Закрыть Test title"
                      className="button icon stub"
                      onClick={[Function]}
                      type="button"
                    />
                  </NavButton>
                </div>
              </div>
              <div
                className="main"
              >
                <div
                  className="title truncate"
                >
                  Test title
                </div>
                <div
                  className="subtitle truncate"
                >
                  Test subtitle
                </div>
              </div>
              <div
                className="button-groups end"
              >
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Закрыть Test title"
                    icon={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "render": [Function],
                      }
                    }
                    onClick={[Function]}
                  >
                    <button
                      aria-hidden={false}
                      aria-label="Закрыть Test title"
                      className="button icon"
                      onClick={[Function]}
                      type="button"
                    >
                      <ForwardRef(CrossSVG)
                        aria-hidden="true"
                        className="svg"
                        fill="#212121"
                      >
                        <svg
                          aria-hidden="true"
                          className="svg"
                          fill="#212121"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            clipRule="evenodd"
                            d="M20.707 3.293a1 1 0 010 1.414l-16 16a1 1 0 01-1.414-1.414l16-16a1 1 0 011.414 0z"
                            fillRule="evenodd"
                          />
                          <path
                            clipRule="evenodd"
                            d="M3.293 3.293a1 1 0 011.414 0l16 16a1 1 0 01-1.414 1.414l-16-16a1 1 0 010-1.414z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </ForwardRef(CrossSVG)>
                    </button>
                  </NavButton>
                </div>
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Вернуться назад"
                    icon={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "render": [Function],
                      }
                    }
                    onClick={[Function]}
                    stub={true}
                  >
                    <button
                      aria-hidden={true}
                      aria-label="Вернуться назад"
                      className="button icon stub"
                      onClick={[Function]}
                      type="button"
                    />
                  </NavButton>
                </div>
              </div>
            </div>
          </NavBar>
          <div
            className="content full-width"
          >
            Test content
          </div>
          <div
            className="footer full-width"
          >
            Test footer
          </div>
        </ScreenLayout>
      </div>
    </Portal>
  </Portal>
</Screen>
`;

exports[`<Screen /> should render without props 1`] = `
<Screen>
  <Portal>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
            style="z-index: 300;"
          >
            <div
              class="nav-bar inner-border-bottom"
              style="height: 56px;"
            >
              <div
                class="button-groups"
              >
                <div
                  class="group"
                >
                  <button
                    aria-hidden="true"
                    aria-label="Закрыть"
                    class="button icon stub"
                    type="button"
                  />
                </div>
              </div>
              <div
                class="main"
              />
              <div
                class="button-groups end"
              >
                <div
                  class="group"
                >
                  <button
                    aria-hidden="false"
                    aria-label="Закрыть"
                    class="button icon"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg"
                      fill="#212121"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M20.707 3.293a1 1 0 010 1.414l-16 16a1 1 0 01-1.414-1.414l16-16a1 1 0 011.414 0z"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M3.293 3.293a1 1 0 011.414 0l16 16a1 1 0 01-1.414 1.414l-16-16a1 1 0 010-1.414z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="content full-width"
            />
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
        style={
          Object {
            "zIndex": 300,
          }
        }
      >
        <ScreenLayout
          childrenRef={[Function]}
          fullScrollThreshold={320}
          onBack={[Function]}
          onClose={[Function]}
          withBackButton={false}
          withCloseButton={true}
          withDivideHeader={true}
          withHeader={true}
        >
          <NavBar
            bottomBordered={true}
            buttons={
              Object {
                "end": Object {
                  "aria-label": "Закрыть",
                  "icon": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "render": [Function],
                  },
                  "onClick": [Function],
                },
                "start": undefined,
              }
            }
          >
            <div
              className="nav-bar inner-border-bottom"
              style={
                Object {
                  "height": "56px",
                }
              }
            >
              <div
                className="button-groups"
              >
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Закрыть"
                    icon={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "render": [Function],
                      }
                    }
                    onClick={[Function]}
                    stub={true}
                  >
                    <button
                      aria-hidden={true}
                      aria-label="Закрыть"
                      className="button icon stub"
                      onClick={[Function]}
                      type="button"
                    />
                  </NavButton>
                </div>
              </div>
              <div
                className="main"
              />
              <div
                className="button-groups end"
              >
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Закрыть"
                    icon={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "render": [Function],
                      }
                    }
                    onClick={[Function]}
                  >
                    <button
                      aria-hidden={false}
                      aria-label="Закрыть"
                      className="button icon"
                      onClick={[Function]}
                      type="button"
                    >
                      <ForwardRef(CrossSVG)
                        aria-hidden="true"
                        className="svg"
                        fill="#212121"
                      >
                        <svg
                          aria-hidden="true"
                          className="svg"
                          fill="#212121"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            clipRule="evenodd"
                            d="M20.707 3.293a1 1 0 010 1.414l-16 16a1 1 0 01-1.414-1.414l16-16a1 1 0 011.414 0z"
                            fillRule="evenodd"
                          />
                          <path
                            clipRule="evenodd"
                            d="M3.293 3.293a1 1 0 011.414 0l16 16a1 1 0 01-1.414 1.414l-16-16a1 1 0 010-1.414z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </ForwardRef(CrossSVG)>
                    </button>
                  </NavButton>
                </div>
              </div>
            </div>
          </NavBar>
          <div
            className="content full-width"
          />
        </ScreenLayout>
      </div>
    </Portal>
  </Portal>
</Screen>
`;

exports[`<Screen /> should renders without close button 1`] = `
<Screen
  navBarProps={
    Object {
      "buttons": Object {
        "end": Object {
          "text": "cross replacer",
        },
      },
    }
  }
  subtitle="Test subtitle"
  title="Test title"
  withCloseButton={false}
>
  <Portal>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
            style="z-index: 300;"
          >
            <div
              class="nav-bar inner-border-bottom"
              style="height: 56px;"
            >
              <div
                class="button-groups"
              >
                <div
                  class="group"
                >
                  <button
                    aria-hidden="true"
                    class="button stub"
                    type="button"
                  >
                    cross replacer
                  </button>
                </div>
              </div>
              <div
                class="main"
              >
                <div
                  class="title truncate"
                >
                  Test title
                </div>
                <div
                  class="subtitle truncate"
                >
                  Test subtitle
                </div>
              </div>
              <div
                class="button-groups end"
              >
                <div
                  class="group"
                >
                  <button
                    aria-hidden="false"
                    class="button"
                    type="button"
                  >
                    cross replacer
                  </button>
                </div>
              </div>
            </div>
            <div
              class="content full-width"
            />
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
        style={
          Object {
            "zIndex": 300,
          }
        }
      >
        <ScreenLayout
          childrenRef={[Function]}
          fullScrollThreshold={320}
          navBarProps={
            Object {
              "buttons": Object {
                "end": Object {
                  "text": "cross replacer",
                },
              },
            }
          }
          onBack={[Function]}
          onClose={[Function]}
          subtitle="Test subtitle"
          title="Test title"
          withBackButton={false}
          withCloseButton={false}
          withDivideHeader={true}
          withHeader={true}
        >
          <NavBar
            bottomBordered={true}
            buttons={
              Object {
                "end": Object {
                  "text": "cross replacer",
                },
                "start": undefined,
              }
            }
            subtitle="Test subtitle"
            title="Test title"
          >
            <div
              className="nav-bar inner-border-bottom"
              style={
                Object {
                  "height": "56px",
                }
              }
            >
              <div
                className="button-groups"
              >
                <div
                  className="group"
                >
                  <NavButton
                    stub={true}
                    text="cross replacer"
                  >
                    <button
                      aria-hidden={true}
                      className="button stub"
                      type="button"
                    >
                      cross replacer
                    </button>
                  </NavButton>
                </div>
              </div>
              <div
                className="main"
              >
                <div
                  className="title truncate"
                >
                  Test title
                </div>
                <div
                  className="subtitle truncate"
                >
                  Test subtitle
                </div>
              </div>
              <div
                className="button-groups end"
              >
                <div
                  className="group"
                >
                  <NavButton
                    text="cross replacer"
                  >
                    <button
                      aria-hidden={false}
                      className="button"
                      type="button"
                    >
                      cross replacer
                    </button>
                  </NavButton>
                </div>
              </div>
            </div>
          </NavBar>
          <div
            className="content full-width"
          />
        </ScreenLayout>
      </div>
    </Portal>
  </Portal>
</Screen>
`;
